syntax = "proto3";
package protomodel;

// import "google/protobuf/timestamp.proto";

message Card {
    enum Suit {
        SPADES = 0;
        CLUBS = 1;
        DIAMONDS = 2;
        HEARTS = 3;
    }

    Suit suit = 1;
    int32 value = 2;
}

message PeggedCard {
    Card card = 1;
    int32 playerID = 2;
}

message Player {
    int32 playerID = 1;
    string name = 2;
    // TODO map[int32]color games = 3;
}

enum Blocker {
    DealCards = 0;
	CribCard = 1;
	CutCard = 2;
	PegCard = 3;
	CountHand = 4;
	CountCrib = 5;
}

enum PlayerColor {
    Green = 0;
    Blue = 1;
    Red = 2;
}

message Hand {
    repeated Card cards = 1;
}

message Game {
    int32 id = 1;
    int64 numActions = 2;
    int32 currentDealer = 3; // ID of the current dealer
    int32 phase = 4;
    Card cutCard = 5;
    map<int32, Blocker> blockingPlayers = 6;
    map<int32, PlayerColor> playerColors = 7;
    map<int32, int32> currentScores = 8;
    map<int32, int32> lagScores = 9;
    map<int32, Hand> hands = 10;
    Hand crib = 11;
    repeated Player players = 12;
    repeated PeggedCard peggedCards = 13;
    
    // TODO deck? or does just the server need it?
}

// TODO actions